v16.2/interfaces/GC.Spread.Sheets.IWorkBookDefaultOptions.md
# Interface: IWorkBookDefaultOptions

[Spread](../modules/GC.Spread.md).[Sheets](../modules/GC.Spread.Sheets.md).IWorkBookDefaultOptions

## Table of contents

### Properties

- [allSheetsListVisible](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allsheetslistvisible)
- [allowAutoCreateHyperlink](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowautocreatehyperlink)
- [allowAutoExtendFilterRange](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowautoextendfilterrange)
- [allowContextMenu](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowcontextmenu)
- [allowCopyPasteExcelStyle](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowcopypasteexcelstyle)
- [allowDynamicArray](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowdynamicarray)
- [allowExtendPasteRange](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowextendpasterange)
- [allowSheetReorder](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowsheetreorder)
- [allowUndo](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowundo)
- [allowUserDeselect](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowuserdeselect)
- [allowUserDragDrop](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowuserdragdrop)
- [allowUserDragFill](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowuserdragfill)
- [allowUserDragMerge](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowuserdragmerge)
- [allowUserEditFormula](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowusereditformula)
- [allowUserResize](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowuserresize)
- [allowUserZoom](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowuserzoom)
- [autoFitType](GC.Spread.Sheets.IWorkBookDefaultOptions.md#autofittype)
- [backColor](GC.Spread.Sheets.IWorkBookDefaultOptions.md#backcolor)
- [backgroundImage](GC.Spread.Sheets.IWorkBookDefaultOptions.md#backgroundimage)
- [backgroundImageLayout](GC.Spread.Sheets.IWorkBookDefaultOptions.md#backgroundimagelayout)
- [calcOnDemand](GC.Spread.Sheets.IWorkBookDefaultOptions.md#calcondemand)
- [calculationMode](GC.Spread.Sheets.IWorkBookDefaultOptions.md#calculationmode)
- [columnResizeMode](GC.Spread.Sheets.IWorkBookDefaultOptions.md#columnresizemode)
- [copyPasteHeaderOptions](GC.Spread.Sheets.IWorkBookDefaultOptions.md#copypasteheaderoptions)
- [customList](GC.Spread.Sheets.IWorkBookDefaultOptions.md#customlist)
- [cutCopyIndicatorBorderColor](GC.Spread.Sheets.IWorkBookDefaultOptions.md#cutcopyindicatorbordercolor)
- [cutCopyIndicatorVisible](GC.Spread.Sheets.IWorkBookDefaultOptions.md#cutcopyindicatorvisible)
- [defaultDragFillType](GC.Spread.Sheets.IWorkBookDefaultOptions.md#defaultdragfilltype)
- [enableAccessibility](GC.Spread.Sheets.IWorkBookDefaultOptions.md#enableaccessibility)
- [enableFormulaTextbox](GC.Spread.Sheets.IWorkBookDefaultOptions.md#enableformulatextbox)
- [font](GC.Spread.Sheets.IWorkBookDefaultOptions.md#font)
- [grayAreaBackColor](GC.Spread.Sheets.IWorkBookDefaultOptions.md#grayareabackcolor)
- [hideSelection](GC.Spread.Sheets.IWorkBookDefaultOptions.md#hideselection)
- [highlightInvalidData](GC.Spread.Sheets.IWorkBookDefaultOptions.md#highlightinvaliddata)
- [iterativeCalculation](GC.Spread.Sheets.IWorkBookDefaultOptions.md#iterativecalculation)
- [iterativeCalculationMaximumChange](GC.Spread.Sheets.IWorkBookDefaultOptions.md#iterativecalculationmaximumchange)
- [iterativeCalculationMaximumIterations](GC.Spread.Sheets.IWorkBookDefaultOptions.md#iterativecalculationmaximumiterations)
- [newTabVisible](GC.Spread.Sheets.IWorkBookDefaultOptions.md#newtabvisible)
- [pasteSkipInvisibleRange](GC.Spread.Sheets.IWorkBookDefaultOptions.md#pasteskipinvisiblerange)
- [pivotAreaReference](GC.Spread.Sheets.IWorkBookDefaultOptions.md#pivotareareference)
- [referenceStyle](GC.Spread.Sheets.IWorkBookDefaultOptions.md#referencestyle)
- [resizeZeroIndicator](GC.Spread.Sheets.IWorkBookDefaultOptions.md#resizezeroindicator)
- [rowResizeMode](GC.Spread.Sheets.IWorkBookDefaultOptions.md#rowresizemode)
- [scrollByPixel](GC.Spread.Sheets.IWorkBookDefaultOptions.md#scrollbypixel)
- [scrollIgnoreHidden](GC.Spread.Sheets.IWorkBookDefaultOptions.md#scrollignorehidden)
- [scrollPixel](GC.Spread.Sheets.IWorkBookDefaultOptions.md#scrollpixel)
- [scrollbarMaxAlign](GC.Spread.Sheets.IWorkBookDefaultOptions.md#scrollbarmaxalign)
- [scrollbarShowMax](GC.Spread.Sheets.IWorkBookDefaultOptions.md#scrollbarshowmax)
- [sheetCount](GC.Spread.Sheets.IWorkBookDefaultOptions.md#sheetcount)
- [showDragDropTip](GC.Spread.Sheets.IWorkBookDefaultOptions.md#showdragdroptip)
- [showDragFillSmartTag](GC.Spread.Sheets.IWorkBookDefaultOptions.md#showdragfillsmarttag)
- [showDragFillTip](GC.Spread.Sheets.IWorkBookDefaultOptions.md#showdragfilltip)
- [showHorizontalScrollbar](GC.Spread.Sheets.IWorkBookDefaultOptions.md#showhorizontalscrollbar)
- [showResizeTip](GC.Spread.Sheets.IWorkBookDefaultOptions.md#showresizetip)
- [showScrollTip](GC.Spread.Sheets.IWorkBookDefaultOptions.md#showscrolltip)
- [showVerticalScrollbar](GC.Spread.Sheets.IWorkBookDefaultOptions.md#showverticalscrollbar)
- [tabEditable](GC.Spread.Sheets.IWorkBookDefaultOptions.md#tabeditable)
- [tabNavigationVisible](GC.Spread.Sheets.IWorkBookDefaultOptions.md#tabnavigationvisible)
- [tabStripRatio](GC.Spread.Sheets.IWorkBookDefaultOptions.md#tabstripratio)
- [tabStripVisible](GC.Spread.Sheets.IWorkBookDefaultOptions.md#tabstripvisible)
- [useTouchLayout](GC.Spread.Sheets.IWorkBookDefaultOptions.md#usetouchlayout)

## Properties

### <a id="allsheetslistvisible" name="allsheetslistvisible"></a> allSheetsListVisible

• `Optional` **allSheetsListVisible**: [`AllSheetsListVisibility`](../enums/GC.Spread.Sheets.AllSheetsListVisibility.md)

___

### <a id="allowautocreatehyperlink" name="allowautocreatehyperlink"></a> allowAutoCreateHyperlink

• `Optional` **allowAutoCreateHyperlink**: `boolean`

___

### <a id="allowautoextendfilterrange" name="allowautoextendfilterrange"></a> allowAutoExtendFilterRange

• `Optional` **allowAutoExtendFilterRange**: `boolean`

___

### <a id="allowcontextmenu" name="allowcontextmenu"></a> allowContextMenu

• `Optional` **allowContextMenu**: `boolean`

___

### <a id="allowcopypasteexcelstyle" name="allowcopypasteexcelstyle"></a> allowCopyPasteExcelStyle

• `Optional` **allowCopyPasteExcelStyle**: `boolean`

___

### <a id="allowdynamicarray" name="allowdynamicarray"></a> allowDynamicArray

• `Optional` **allowDynamicArray**: `boolean`

___

### <a id="allowextendpasterange" name="allowextendpasterange"></a> allowExtendPasteRange

• `Optional` **allowExtendPasteRange**: `boolean`

___

### <a id="allowsheetreorder" name="allowsheetreorder"></a> allowSheetReorder

• `Optional` **allowSheetReorder**: `boolean`

___

### <a id="allowundo" name="allowundo"></a> allowUndo

• `Optional` **allowUndo**: `boolean`

___

### <a id="allowuserdeselect" name="allowuserdeselect"></a> allowUserDeselect

• `Optional` **allowUserDeselect**: `boolean`

___

### <a id="allowuserdragdrop" name="allowuserdragdrop"></a> allowUserDragDrop

• `Optional` **allowUserDragDrop**: `boolean`

___

### <a id="allowuserdragfill" name="allowuserdragfill"></a> allowUserDragFill

• `Optional` **allowUserDragFill**: `boolean`

___

### <a id="allowuserdragmerge" name="allowuserdragmerge"></a> allowUserDragMerge

• `Optional` **allowUserDragMerge**: `boolean`

___

### <a id="allowusereditformula" name="allowusereditformula"></a> allowUserEditFormula

• `Optional` **allowUserEditFormula**: `boolean`

___

### <a id="allowuserresize" name="allowuserresize"></a> allowUserResize

• `Optional` **allowUserResize**: `boolean`

___

### <a id="allowuserzoom" name="allowuserzoom"></a> allowUserZoom

• `Optional` **allowUserZoom**: `boolean`

___

### <a id="autofittype" name="autofittype"></a> autoFitType

• `Optional` **autoFitType**: [`AutoFitType`](../enums/GC.Spread.Sheets.AutoFitType.md)

___

### <a id="backcolor" name="backcolor"></a> backColor

• `Optional` **backColor**: `string`

___

### <a id="backgroundimage" name="backgroundimage"></a> backgroundImage

• `Optional` **backgroundImage**: ``null`` \| `string`

___

### <a id="backgroundimagelayout" name="backgroundimagelayout"></a> backgroundImageLayout

• `Optional` **backgroundImageLayout**: [`ImageLayout`](../enums/GC.Spread.Sheets.ImageLayout.md)

___

### <a id="calcondemand" name="calcondemand"></a> calcOnDemand

• `Optional` **calcOnDemand**: `boolean`

___

### <a id="calculationmode" name="calculationmode"></a> calculationMode

• `Optional` **calculationMode**: [`CalculationMode`](../enums/GC.Spread.Sheets.CalculationMode.md)

___

### <a id="columnresizemode" name="columnresizemode"></a> columnResizeMode

• `Optional` **columnResizeMode**: [`ResizeMode`](../enums/GC.Spread.Sheets.ResizeMode.md)

___

### <a id="copypasteheaderoptions" name="copypasteheaderoptions"></a> copyPasteHeaderOptions

• `Optional` **copyPasteHeaderOptions**: [`CopyPasteHeaderOptions`](../enums/GC.Spread.Sheets.CopyPasteHeaderOptions.md)

___

### <a id="customlist" name="customlist"></a> customList

• `Optional` **customList**: `string`[][]

___

### <a id="cutcopyindicatorbordercolor" name="cutcopyindicatorbordercolor"></a> cutCopyIndicatorBorderColor

• `Optional` **cutCopyIndicatorBorderColor**: `string`

___

### <a id="cutcopyindicatorvisible" name="cutcopyindicatorvisible"></a> cutCopyIndicatorVisible

• `Optional` **cutCopyIndicatorVisible**: `boolean`

___

### <a id="defaultdragfilltype" name="defaultdragfilltype"></a> defaultDragFillType

• `Optional` **defaultDragFillType**: [`AutoFillType`](../enums/GC.Spread.Sheets.Fill.AutoFillType.md)

___

### <a id="enableaccessibility" name="enableaccessibility"></a> enableAccessibility

• `Optional` **enableAccessibility**: `boolean`

___

### <a id="enableformulatextbox" name="enableformulatextbox"></a> enableFormulaTextbox

• `Optional` **enableFormulaTextbox**: `boolean`

___

### <a id="font" name="font"></a> font

• `Optional` **font**: `string`

___

### <a id="grayareabackcolor" name="grayareabackcolor"></a> grayAreaBackColor

• `Optional` **grayAreaBackColor**: ``null`` \| `string`

___

### <a id="hideselection" name="hideselection"></a> hideSelection

• `Optional` **hideSelection**: `boolean`

___

### <a id="highlightinvaliddata" name="highlightinvaliddata"></a> highlightInvalidData

• `Optional` **highlightInvalidData**: `boolean`

___

### <a id="iterativecalculation" name="iterativecalculation"></a> iterativeCalculation

• `Optional` **iterativeCalculation**: `boolean`

___

### <a id="iterativecalculationmaximumchange" name="iterativecalculationmaximumchange"></a> iterativeCalculationMaximumChange

• `Optional` **iterativeCalculationMaximumChange**: `number`

___

### <a id="iterativecalculationmaximumiterations" name="iterativecalculationmaximumiterations"></a> iterativeCalculationMaximumIterations

• `Optional` **iterativeCalculationMaximumIterations**: `number`

___

### <a id="newtabvisible" name="newtabvisible"></a> newTabVisible

• `Optional` **newTabVisible**: `boolean`

___

### <a id="pasteskipinvisiblerange" name="pasteskipinvisiblerange"></a> pasteSkipInvisibleRange

• `Optional` **pasteSkipInvisibleRange**: `boolean`

___

### <a id="pivotareareference" name="pivotareareference"></a> pivotAreaReference

• `Optional` **pivotAreaReference**: [`PivotAreaReference`](../enums/GC.Spread.Pivot.PivotAreaReference.md)

___

### <a id="referencestyle" name="referencestyle"></a> referenceStyle

• `Optional` **referenceStyle**: `number`

___

### <a id="resizezeroindicator" name="resizezeroindicator"></a> resizeZeroIndicator

• `Optional` **resizeZeroIndicator**: [`ResizeZeroIndicator`](../enums/GC.Spread.Sheets.ResizeZeroIndicator.md)

___

### <a id="rowresizemode" name="rowresizemode"></a> rowResizeMode

• `Optional` **rowResizeMode**: [`ResizeMode`](../enums/GC.Spread.Sheets.ResizeMode.md)

___

### <a id="scrollbypixel" name="scrollbypixel"></a> scrollByPixel

• `Optional` **scrollByPixel**: `boolean`

___

### <a id="scrollignorehidden" name="scrollignorehidden"></a> scrollIgnoreHidden

• `Optional` **scrollIgnoreHidden**: `boolean`

___

### <a id="scrollpixel" name="scrollpixel"></a> scrollPixel

• `Optional` **scrollPixel**: `number`

___

### <a id="scrollbarmaxalign" name="scrollbarmaxalign"></a> scrollbarMaxAlign

• `Optional` **scrollbarMaxAlign**: `boolean`

___

### <a id="scrollbarshowmax" name="scrollbarshowmax"></a> scrollbarShowMax

• `Optional` **scrollbarShowMax**: `boolean`

___

### <a id="sheetcount" name="sheetcount"></a> sheetCount

• `Optional` **sheetCount**: `number`

___

### <a id="showdragdroptip" name="showdragdroptip"></a> showDragDropTip

• `Optional` **showDragDropTip**: `boolean`

___

### <a id="showdragfillsmarttag" name="showdragfillsmarttag"></a> showDragFillSmartTag

• `Optional` **showDragFillSmartTag**: `boolean`

___

### <a id="showdragfilltip" name="showdragfilltip"></a> showDragFillTip

• `Optional` **showDragFillTip**: `boolean`

___

### <a id="showhorizontalscrollbar" name="showhorizontalscrollbar"></a> showHorizontalScrollbar

• `Optional` **showHorizontalScrollbar**: `boolean`

___

### <a id="showresizetip" name="showresizetip"></a> showResizeTip

• `Optional` **showResizeTip**: [`ShowResizeTip`](../enums/GC.Spread.Sheets.ShowResizeTip.md)

___

### <a id="showscrolltip" name="showscrolltip"></a> showScrollTip

• `Optional` **showScrollTip**: [`ShowScrollTip`](../enums/GC.Spread.Sheets.ShowScrollTip.md)

___

### <a id="showverticalscrollbar" name="showverticalscrollbar"></a> showVerticalScrollbar

• `Optional` **showVerticalScrollbar**: `boolean`

___

### <a id="tabeditable" name="tabeditable"></a> tabEditable

• `Optional` **tabEditable**: `boolean`

___

### <a id="tabnavigationvisible" name="tabnavigationvisible"></a> tabNavigationVisible

• `Optional` **tabNavigationVisible**: `boolean`

___

### <a id="tabstripratio" name="tabstripratio"></a> tabStripRatio

• `Optional` **tabStripRatio**: `number`

___

### <a id="tabstripvisible" name="tabstripvisible"></a> tabStripVisible

• `Optional` **tabStripVisible**: `boolean`

___

### <a id="usetouchlayout" name="usetouchlayout"></a> useTouchLayout

• `Optional` **useTouchLayout**: `boolean`
